# cdp-etl-2

./: .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt
src/: main.py
src/connector/: base.py  factory.py  ftp.py
src/database/: base.py  elastic.py  postgres.py
src/file_handler/: csv_factory.py  file_handler_factory.py  file_handler_factory_creator.py  file_types.py
src/file_handler/base/: analyser.py  loader.py  mapping_validator.py  transformer.py
src/file_handler/csv_file/: analyser.py  loader.py  mapping_validator.py  transformer.py
src/models/api/: connector.py
src/models/connector/: connector.py
src/models/database/: product.py  sale.py  salesperson.py
src/models/file/: file_config.py
src/models/mapping/: base.py  database.py  products.py  sales.py  salespeople.py
src/models/processing/: date_formatter_parser.py  entity_parser.py  field_aggregator_parser.py  number_formatter_parser.py  processor.py
src/processing/: date_formatter.py  entity_parser.py  factory.py  field_aggregator.py  number_formatter.py  processor.py
src/routers/: connector.py  database.py  processor.py
tests/processing/: test_date_formatter.py  test_field_aggregator.py
